--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,7 +18,7 @@ $urbOb2: #1a1a1a;
 $publicHealth: $color-main;
 $inca: #359600;
 $industries: #00598c;
-$workforce: #db3300;
+$calciteDesignSystem: #2d2670;
 $dashboard: #f3b20a;
 $myEsri: #404040;
 $calciteUiIcons: $white;
@@ -53,7 +53,7 @@ $project-themes: (
     2: $urbOb1,
     4: $publicHealth,
     7: $industries,
-    8: $workforce,
+    8: $calciteDesignSystem,
     11: $myEsri,
 );
 
